# relay

./: Cargo.toml  README.md  ROADMAP.md
.planning/: PROJECT.md  REQUIREMENTS.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/notes/: cli-ux-trust-vs-invocation.md  handoff-feature-design.md  relay-architecture-status.md
agent_docs/tidewater_handoff/: tokens.json
crates/harness-data/: Cargo.toml
crates/relay-paths/: Cargo.toml
crates/relay-paths/src/: lib.rs
docs/cli/: rly-handoff.md
docs/design/: context-threshold-events.md  handoff-brief.md
gui/src/: App.tsx  api.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  build.rs
src/: index.ts
src/agents/: cli-agents.ts  process-stream-line.ts  repo-admin.ts
src/approvals/: queue.ts
src/budget/: session-tracker-pool.ts  threshold-feed-bridge.ts  token-tracker.ts
src/cli/: chat-record-usage.ts  handoff.ts  print-status-context.ts
src/crosslink/: store.ts  types.ts
src/domain/: agent.ts  handoff.ts  model-context-windows.ts  session-budget.ts
src/mcp/: channel-tools.ts  readiness-tools.ts  role-allowlist.ts  server.ts
src/orchestrator/: dispatch-token-usage.ts  orchestrator-v2.ts  repo-admin-session.ts
test/: crosslink-store.test.ts
test/agents/: cli-agents-claude-usage.test.ts  cli-agents-codex-usage-spike.test.ts  cli-agents-codex-usage.test.ts  repo-admin.test.ts
test/budget/: session-tracker-pool.test.ts  threshold-feed-bridge.test.ts  (+2 more)
tui/: Cargo.toml  build.rs
(+75 files in other folders)
